fix video z-index

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -225,6 +225,8 @@ body
           letter-spacing: 0.2em
         &--smallTxt
           font-size: 0.7em
+        &--marginTop
+          margin-top: -16px
 
 
     &-text
@@ -245,12 +247,12 @@ body
       right: 0
       width: 100%
       height: 100%
-      z-index: 2
+      z-index: 6
       background-size: 100% 100%
       background-color: black
       background-position: center center
-      background-size: contain
       object-fit: cover
+
 
 
 
